<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/friesIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:src="@drawable/baseline_notes_white_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tabularView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tabularView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tabularView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:fontFamily="cursive"
        android:padding="4dp"
        android:text="@string/tabular"
        android:textAlignment="center"
        android:textColor="#9E3721"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        app:layout_constraintEnd_toStartOf="@+id/search"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toEndOf="@+id/friesIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <ImageView
        android:id="@+id/search"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/baseline_search_white_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tabularView"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintTop_toTopOf="@+id/tabularView" />

    <ImageView
        android:id="@+id/save"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="28dp"
        android:src="@drawable/baseline_calendar_today_white_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tabularView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tabularView" />

    <TextView
        android:id="@+id/currentDateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="104dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        app:layout_constraintEnd_toStartOf="@+id/todayView2"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/todayView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:background="@color/red"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:text="@string/today"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/currentDateView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/currentDateView" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:dateTextAppearance="@style/CalenderViewDateCustomText"
        android:theme="@style/CalenderViewCustom"
        android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_add_20"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="90dp"
        android:layout_height="2dp"
        android:background="#F61705"
        app:layout_constraintBottom_toBottomOf="@+id/ScheduleView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ScheduleView"
        app:layout_constraintTop_toTopOf="@+id/ScheduleView" />

    <TextView
        android:id="@+id/ScheduleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/today_s_schedule"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="90dp"
        android:layout_height="2dp"
        android:background="#F61705"
        app:layout_constraintBottom_toBottomOf="@+id/ScheduleView"
        app:layout_constraintEnd_toStartOf="@+id/ScheduleView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ScheduleView" />


    <TextView
        android:id="@+id/study"
        android:layout_width="347dp"
        android:layout_height="26dp"
        android:layout_marginTop="12dp"
        android:background="#F61705"
        android:text="@string/Description_1"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScheduleView" />

    <TextView
        android:id="@+id/note2"
        android:layout_width="347dp"
        android:layout_height="26dp"
        android:layout_marginTop="8dp"
        android:background="#F61705"
        android:text="@string/Description_2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/study" />

    <TextView
        android:id="@+id/note3"
        android:layout_width="347dp"
        android:layout_height="26dp"
        android:background="#F61705"
        android:text="@string/Description_3"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note2"
        app:layout_constraintVertical_bias="0.084" />

</androidx.constraintlayout.widget.ConstraintLayout>




